--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
   "name": "react-ios-modal",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chet-w/react-ios-modal"
+  },
+  "files": [
+    "package/index.ts"
+  ],
   "version": "0.1.0",
   "dependencies": {
     "framer-motion": "^4.0.3",
