--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-ios-modal",
+  "name": "@chet-w/react-ios-modal",
   "repository": {
     "type": "git",
     "url": "https://github.com/chet-w/react-ios-modal"
