--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "modal",
-  "version": "0.1.0",
-  "private": true,
+  "name": "@chet-w/react-ios-modal",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chet-w/react-ios-modal"
+  },
+  "files": [
+    "package/index.ts"
+  ],
+  "version": "0.1.1",
   "dependencies": {
     "framer-motion": "^4.0.3",
     "phosphor-react": "^1.2.1",
@@ -9,7 +15,6 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
-    "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -41,9 +46,10 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/styled-components": "^5.1.9",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0"
+    "@types/react-dom": "^17.0.0",
+    "@types/styled-components": "^5.1.9",
+    "typescript": "^4.1.2"
   }
 }
