--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,8 +6,8 @@ on:
 
 jobs:
   test:
-    name: Run Tests
-    runs-on: unbuntu-latest
+    name: Publish
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2.1.1
@@ -18,6 +18,5 @@ jobs:
           registry-url: https://registry.npmjs.org
       - name: Publish
         run: yarn publish
-        working-directory: package
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
