--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2.1.1
       - name: Setup node
-        uses: actions/setup-node@1.4.2
+        uses: actions/setup-node@v1.4.2
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org
