--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14
-          always-auth: true
+          registry-url: "https://npm.pkg.github.com/"
       - name: Publish
         run: yarn publish
         env:
