--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,12 +1,8 @@
 name: "CI/CD"
 
-# on:
-#   release:
-#     types: [published]
 on:
-  push:
-    branches:
-      - "**" # matches every branch
+  release:
+    types: [published]
 
 jobs:
   test:
