--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,13 +9,13 @@ jobs:
     name: Publish
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2.1.1
-      - name: Setup node
-        uses: actions/setup-node@v1.4.2
+      - name: Checkout branch
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
         with:
-          node-version: 12
-          registry-url: https://registry.npmjs.org
+          node-version: 14
+          registry-url: "https://npm.pkg.github.com/"
       - name: Publish
         run: yarn publish
         env:
