--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: "CI/CD"
+name: "Publish"
 
 on:
   release:
@@ -6,7 +6,20 @@ on:
 
 jobs:
   test:
-    name: Publish
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout branch
+        uses: actions/checkout@v2
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 14
+      - name: Install dependencies
+        run: yarn
+      - name: Run tests
+        run: yarn test
+  publish:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: Checkout branch
